# grit

./: .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.skills/grit-benchmark/: SKILL.md
.skills/grit-commit-style/: SKILL.md
bench/: CMakeLists.txt
bench/standard/: CMakeLists.txt  README.md  aliases.h  cli.cpp  cli.h  cli_options.h  hdf5_io.cpp  hdf5_io.h  main.cpp  matrix_market.cpp  matrix_market.h  memory.cpp  memory.h  options.h  report.cpp  report.h  runner.cpp  runner.h  solve_result.h  text.cpp  text.h
cmake/: CheckStdFloat128.cmake  CompilerFlags.cmake  GenerateInstantiationSources.cmake  SetupCcache.cmake  SetupDependencies.cmake  SetupPaths.cmake  SetupScalars.cmake  gritConfig.cmake.in
cmake/cmake_dependency_provider/: PKGInstall.cmake  cmake_installer.cmake  cmake_provider.cmake
cmake/cmake_dependency_provider/external_cli11/: CMakeLists.txt
cmake/cmake_dependency_provider/external_fmt/: CMakeLists.txt
cmake/cmake_dependency_provider/external_h5pp/: CMakeLists.txt
cmake/cmake_dependency_provider/external_spdlog/: CMakeLists.txt
examples/: 01-small-dense.cpp  CMakeLists.txt
include/grit/: MatVec.h  Matvec.h  config.h  enums.h  grit.h  result.h  solver_view.h
include/grit/algo/: gdplusk.h  lanczos.h  lobpcg.h
include/grit/form/: base.h  generalized.h  standard.h
include/grit/internal/: MatVec.ipp  Matvec.ipp  config.ipp  log.h  result.ipp  scalars.h  solver_view.ipp  tid.h
include/grit/internal/algo/: gdplusk.ipp  gdplusk_correction.ipp  lanczos.ipp  lobpcg.ipp
include/grit/internal/eigen/: BiCGSTAB_ST.h  ConjugateGradient_ST.h  MINRES_ST.h
include/grit/internal/form/: base.ipp  base_orth.ipp  base_ritz.ipp  generalized.ipp  standard.ipp
include/grit/internal/matrix/: to_string.h
include/grit/internal/precondition/: IterativeLinearSolverConfig.h  IterativeLinearSolverPreconditioner.h  JacobiDavidsonOperator.h  MatrixLikeOperator.h
include/grit/internal/prob/: generalized.ipp  standard.ipp
include/grit/prob/: generalized.h  standard.h
include/grit/solv/: generalized.h  standard.h
skills/grit-build-test/: SKILL.md
skills/grit-xdmrgpp-port/: SKILL.md
source/instantiations/: grit.inst.cpp.in
tests/: CMakeLists.txt  test-basic.cpp  test-generalized.cpp  test-matvec.cpp  test-result.cpp  test-standard.cpp
tests/basic/: CMakeLists.txt  main.cpp
tests/cmake_consumer/: CMakeLists.txt  main.cpp
tests/generalized/: CMakeLists.txt  main.cpp
tests/matvec/: CMakeLists.txt  main.cpp
tests/regression/: CMakeLists.txt  main.cpp
tests/result/: CMakeLists.txt  main.cpp
tests/standard/: CMakeLists.txt  main.cpp
