cmake_minimum_required(VERSION 3.24)
project(grit-test-regression)
enable_testing()
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE grit::grit)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/..)
target_compile_definitions(${PROJECT_NAME} PRIVATE GRIT_TEST_DATA_DIR="${CMAKE_CURRENT_LIST_DIR}/../data")
add_test(NAME ${PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMAND ${PROJECT_NAME})
